--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,10 +12,17 @@
 	// "forwardPorts": [],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "./.devcontainer/postCreateCommand.sh"
-
-	// Configure tool-specific properties.
-	// "customizations": {},
+	"postCreateCommand": "./.devcontainer/postCreateCommand.sh",
+	
+	"customizations": {
+		"vscode": {
+			"extensions": [
+				"Angular.ng-template",
+				"dbaeumer.vscode-eslint",
+				"ms-vscode.live-server"
+			]
+		}
+	}
 
 	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
 	// "remoteUser": "root"
