--- a/angular.json
+++ b/angular.json
@@ -69,6 +69,9 @@
               "buildTarget": "sandcastle:build:development"
             }
           },
+          "options": {
+            "port": 4141
+          },
           "defaultConfiguration": "development"
         },
         "extract-i18n": {
