--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "@angular/core": "^17.0.9",
     "@angular/forms": "^17.0.9",
     "@angular/material": "^17.0.5",
-    "@angular/platform-browser": "^17.0.9",
-    "@angular/platform-browser-dynamic": "^17.0.9",
     "@angular/router": "^17.0.9",
+    "@fortawesome/angular-fontawesome": "0.14.1",
+    "@fortawesome/fontawesome-svg-core": "6.5.1",
+    "@fortawesome/free-solid-svg-icons": "6.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
