--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,17 +13,15 @@ jobs:
     outputs:
       docker-registry: ${{ startsWith(github.ref, 'refs/tags/v') && 'docker.io' || 'ghcr.io' }}
       docker-username: ${{ startsWith(github.ref, 'refs/tags/v') && secrets.DOCKERHUB_USERNAME || github.actor }}
-      dockerfile-directory: "src"
     steps:
       - name: Set outputs
         run: echo "Set outputs"
       
   docker:
     needs: setup
-    uses: UtopikGoodies/github-workflow/.github/workflows/docker.yml@main
+    uses: UtopikGoodies/github-workflow/.github/workflows/docker.yml@update
     with:
       registry: ${{ needs.setup.outputs.docker-registry }}
       username: ${{ needs.setup.outputs.docker-username }}
-      dockerfile-directory: ${{ needs.setup.outputs.dockerfile-directory }}
     secrets:
       password: ${{ startsWith(github.ref, 'refs/tags/v') && secrets.DOCKERHUB_TOKEN || secrets.GITHUB_TOKEN }}
