--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@angular-eslint/template-parser": "17.2.1",
     "@angular/cli": "^17.1.0",
     "@angular/compiler-cli": "^17.1.0",
+    "@angular/platform-browser-dynamic": "^17.3.3",
     "@types/jasmine": "~5.1.4",
     "@typescript-eslint/eslint-plugin": "6.19.0",
     "@typescript-eslint/parser": "6.19.0",
