--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,22 +17,22 @@ jobs:
       - name: Set outputs
         run: echo "Set outputs"
       
-  test:
-    needs: setup
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+  # test:
+  #   needs: setup
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4.0.2
-        with:
-          node-version: 20
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v4.0.2
+  #       with:
+  #         node-version: 20
 
-      - name: Run tests
-        run: echo "Run tests"
-      - run: yarn install
-      - run: yarn test --watch=false
+  #     - name: Run tests
+  #       run: echo "Run tests"
+  #     - run: yarn install
+  #     - run: yarn test --watch=false
 
   docker:
     needs: test
