--- a/src/assets/mf.manifest.json
+++ b/src/assets/mf.manifest.json
@@ -1,7 +1,7 @@
 {
   "security": {
     "remoteName": "security",
-    "remoteEntry": "http://localhost:4255/remoteEntry.js",
+    "remoteEntry": "http://security.sandcastle-dev.utopiklab.net/remoteEntry.js",
     "exposedModule": "./AppComponent",
     "displayName": "Security",
     "routePath": "security",
