--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       docker-registry: ${{ startsWith(github.ref, 'refs/tags/v') && 'docker.io' || 'ghcr.io' }}
-      docker-username: ${{ startsWith(github.ref, 'refs/tags/v') && secrets.DOCKERHUB_USERNAME || github.actor }}
     steps:
       - name: Set outputs
         run: echo "Set outputs"
@@ -39,6 +38,6 @@ jobs:
     uses: UtopikGoodies/github-workflow/.github/workflows/docker.yml@main
     with:
       registry: ${{ needs.setup.outputs.docker-registry }}
-      username: ${{ needs.setup.outputs.docker-username }}
     secrets:
+      username: ${{ startsWith(github.ref, 'refs/tags/v') && secrets.DOCKERHUB_USERNAME || github.actor }}
       password: ${{ startsWith(github.ref, 'refs/tags/v') && secrets.DOCKERHUB_TOKEN || secrets.GITHUB_TOKEN }}
